--- a/_includes/widgets/profile_card.html
+++ b/_includes/widgets/profile_card.html
@@ -76,6 +76,12 @@
                         </a>
                         {% endif %}
 
+                        {% if site.data.profile.researchgate %}
+                        <a class="pr-3 no-break" target="_blank" href="https://www.researchgate.net/profile/{{ site.data.profile.researchgate }}">
+                            <i class="fab fa-researchgate"></i> ResearchGate
+                        </a>
+                        {% endif %}
+
                         {% if site.data.profile.twitter %}
                         <a class="pr-3 no-break" target="_blank" href="https://twitter.com/{{ site.data.profile.twitter }}">
                             <i class="fab fa-twitter"></i> Twitter
